--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -102,6 +102,17 @@
             </div>
           </section>
           {% endif %}
+          {% if not demographics.governor_deputy_governor.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-demographics-governor_deputy_governor"
+                   data-chart-title="Distribution of Women and Men Occupying Position of Governor and Deputy Governor 2015 - 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/952"></div>
+            </div>
+          </section>
+          {% endif %}
       </div>
     </article>
   {% endif %}
@@ -727,6 +738,24 @@
                       data-source-title="National Bureau of Statistics, 2018"
                       data-source-link="https://nigerianstat.gov.ng/resource/"></div>
               </div>
+        </section>
+        {% endif %}
+        {% if not others.international_flights.is_missing or not others.domestic_flights.is_missing %}
+        <section class="clearfix stat-row">
+            <div class="column-half">
+                <div id="chart-column-others-international_flights"
+                      data-chart-title="Aviation Sector: Private Aircrafts Passengers and Aircraft Movement, International Flights (2017)"
+                      data-stat-type="number"
+                      data-source-title="National Bureau of Statistics, 2017"
+                      data-source-link="https://nigerianstat.gov.ng/download/796"></div>
+              </div>
+              <div class="column-half">
+                  <div id="chart-column-others-domestic_flights"
+                        data-chart-title="Aviation Sector: Private Aircrafts Passengers and Aircraft Movement, Domestic Flights (2017)"
+                        data-stat-type="number"
+                        data-source-title="National Bureau of Statistics, 2017"
+                        data-source-link="https://nigerianstat.gov.ng/download/796"></div>
+                </div>
         </section>
         {% endif %}
         {% if not others.transport_motorcycle_fare.is_missing %}
