--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -44,8 +44,10 @@
 {% block profile_detail %}
 {% if not excisions.is_missing %}
 <article id="excisions" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1>Land Excisions</h1>
+  </header>
+  <div class="section-container">
     <section class="clearfix stat-row">
       <div class="column-half" id="chart-pie-excisions-excisions_dist" data-stat-type="scaled-percentage"
         data-chart-title="Legal vs. Illegal Land Excisions"></div>
@@ -55,8 +57,10 @@
 {% endif %}
 {% if not workershostel.is_missing %}
 <article id="workershostel" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1>Worker's Hostel Household</h1>
+  </header>
+  <div class="section-container">
     {% if not workershostel.population_year.is_missing %}
     <section class="clearfix stat-row">
       <div class="column-full">
@@ -177,8 +181,10 @@
 {% endif %}
 {% if not landsales.is_missing %}
 <article id="agricultural-land-sales" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1>Agricultural Land Sales</h1>
+  </header>
+  <div class="section-container">
     <section class="clearfix stat-row">
       <h2 class="header-for-columns"><a class="permalink">Land Sales
           Distribution from August 2017 to July 2018
@@ -229,8 +235,10 @@
 
 {% if not landsalescolour.is_missing %}
 <article id="agricultural-land-sales-colour" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1 class="profile-detail-header">Land traded statistic for transactions of colour</h1>
+  </header>
+  <div class="section-container">
     <section class="clearfix stat-row">
       <div class="column-quarter">
         {% include 'profile/_blocks/_stat_list.html' with stat=landsalescolour.landsalescolourhectares_stat stat_type='number' %}
@@ -385,8 +393,10 @@
 
 {% if not farmland.is_missing %}
 <article id="farm-land" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1 class="profile-detail-header">Individual Land Ownership of farms and agricultural holdings</h1>
+  </header>
+  <div class="section-container">
     <section class="clearfix stat-row">
       <div class="column-quarter">
         <div id="chart-histogram-farmland-private_land_ownership_in_hectares_per_category"
@@ -493,8 +503,10 @@
 
 {% if not ervenland.is_missing %}
 <article id="erven-land" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1 class="profile-detail-header">Erven Land</h1>
+  </header>
+  <div class="section-container">
     <section class="clearfix stat-row">
       <div class="column-quarter">
         <div id="chart-histogram-ervenland-erven_land_ownership_in_hectares_by_race" data-stat-type="scaled-percentage"
@@ -549,8 +561,10 @@
 
 {% if not sectionaltitleland.is_missing %}
 <article id="sectional-title-land" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1 class="profile-detail-header">Sectional Title Land</h1>
+  </header>
+  <div class="section-container">
     <p>
       Sectional Title Land: Separate ownership of units or sections
       within
@@ -625,8 +639,10 @@
 
 {% if not redistributionandrestitution.is_missing %}
 <article id="redistribution-restitution" class="clearfix">
-  <div class="section-container">
+  <header>
     <h1 class="profile-detail-header">Land Redistribution and Restitution</h1>
+  </header>
+  <div class="section-container">
     <section class="clearfix stat-row">
       <h2 class="header-for-columns"><a class="permalink"> Land
           Redistribution Programme <i class="fa fa-link"></i></a></h2>
@@ -827,8 +843,10 @@
 
 {% if not afrobarometer.is_missing %}
 <article id="afrobarometer">
-  <div class="section-container">
+  <header>
     <h1 class="profile-detail-header">Afrobarometer Round 7</h1>
+  </header>
+  <div class="section-container">
     <section class="clearfix stat-row">
       <div class="column-half">
         <div id="chart-pie-afrobarometer-access_to_information" data-stat-type="percentage"
