Remove custom css and header styles

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -44,7 +44,7 @@
 {% block profile_detail %}
 {% if not excisions.is_missing %}
 <article id="excisions" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1>Land Excisions</h1>
   </header>
   <div class="section-container">
@@ -57,7 +57,7 @@
 {% endif %}
 {% if not workershostel.is_missing %}
 <article id="workershostel" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1>Worker's Hostel Household</h1>
   </header>
   <div class="section-container">
@@ -181,7 +181,7 @@
 {% endif %}
 {% if not landsales.is_missing %}
 <article id="agricultural-land-sales" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1>Agricultural Land Sales</h1>
   </header>
   <div class="section-container">
@@ -235,7 +235,7 @@
 
 {% if not landsalescolour.is_missing %}
 <article id="agricultural-land-sales-colour" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1 class="profile-detail-header">Land traded statistic for transactions of colour</h1>
   </header>
   <div class="section-container">
@@ -393,7 +393,7 @@
 
 {% if not farmland.is_missing %}
 <article id="farm-land" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1 class="profile-detail-header">Individual Land Ownership of farms and agricultural holdings</h1>
   </header>
   <div class="section-container">
@@ -503,7 +503,7 @@
 
 {% if not ervenland.is_missing %}
 <article id="erven-land" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1 class="profile-detail-header">Erven Land</h1>
   </header>
   <div class="section-container">
@@ -561,7 +561,7 @@
 
 {% if not sectionaltitleland.is_missing %}
 <article id="sectional-title-land" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1 class="profile-detail-header">Sectional Title Land</h1>
   </header>
   <div class="section-container">
@@ -639,7 +639,7 @@
 
 {% if not redistributionandrestitution.is_missing %}
 <article id="redistribution-restitution" class="clearfix">
-  <header>
+  <header class="section-contents">
     <h1 class="profile-detail-header">Land Redistribution and Restitution</h1>
   </header>
   <div class="section-container">
@@ -843,7 +843,7 @@
 
 {% if not afrobarometer.is_missing %}
 <article id="afrobarometer">
-  <header>
+  <header class="section-contents">
     <h1 class="profile-detail-header">Afrobarometer Round 7</h1>
   </header>
   <div class="section-container">
