Show Indices w/ decimal places

--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -97,6 +97,7 @@
               <div id="chart-column-demographics-compiled_indeces"
                    data-chart-title="Human Development Indices"
                    data-stat-type="number"
+                   data-decimal-places="3"
                    data-source-title="Computation of Human Development Indices for the UNDP Nigeria Human Development Report (2016)"
                    data-source-link="https://nigerianstat.gov.ng/download/830"></div>
             </div>
@@ -347,6 +348,7 @@
               <div class="column-half">
                    <div id="chart-column-education-hdi_education"
                    data-stat-type="number"
+                   data-decimal-places="3"
                    data-chart-title="Education Index (EI) for 2013 and 2016"
                    data-source-title="Computation of Human Development Indices for the UNDP Nigeria Human Development Report (2016)"
                    data-source-link="https://nigerianstat.gov.ng/download/830"></div>
