show y-axis, and qualifier

--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -38,6 +38,8 @@
               <div id="chart-grouped_column-demographics-population_projection"
                    data-chart-title="Population Projections, 2007-2016"
                    data-stat-type="number"
+                   data-chart-show-y-axis="true"
+                   data-qualifier="F: Female,  M: Male"
                    data-source-title="National Bureau of Statistics, 2016"
                    data-source-link="https://nigerianstat.gov.ng/resource/POPULATION%20PROJECTION%20Nigeria%20sgfn.xls"></div>
             </div>
