active voice + active internert subscription table and charts

--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -774,6 +774,28 @@
             </div>
         </section>
         {% endif %}
+        {% if not others.mobile_subscription_q2_2019.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-mobile_subscription_q2_2019"
+                   data-chart-title="Telecoms Subscriptions by Mobile GSM and State by June, Q2 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.mobile_subscription_q1_2019.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-mobile_subscription_q1_2019"
+                   data-chart-title="Telecoms Subscriptions by Mobile GSM and State by March, Q1 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
         {% if not others.mobile_subscription.is_missing %}
         <section class="clearfix stat-row">
           <div class="column-full">
