--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -127,7 +127,8 @@
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-grouped_column-demographics-officer_house_assembly"
-                   data-chart-title="Distribution of Women and Men Occupying Position of Governor and Deputy Governor 2015 - 2019"
+                   data-chart-title="Representation of Principal Officers in State House of Assembly by Type of Office and Sex 2015 - 2019"
+                   data-qualifier="F: Female,  M: Male"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2018"
                    data-source-link="https://nigerianstat.gov.ng/download/952"></div>
@@ -765,19 +766,12 @@
         {% endif %}
         {% if not others.mineral_production.is_missing %}
         <section class="clearfix stat-row">
-          <div class="column-two-thirds">
+          <div class="column-full">
               <div id="chart-column-others-mineral_production"
                    data-chart-title="Mineral Production 2016 - 2018"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2018"
                    data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-            </div>
-            <div class="column-third">
-              <div id="chart-column-others-prepaid_metres"
-                   data-chart-title="Number of consumers with prepaid meters Q4 2018"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2018"
-                   data-source-link="https://nigerianstat.gov.ng/download/866"></div>
             </div>
         </section>
         {% endif %}
@@ -838,12 +832,19 @@
         {% endif %}
         {% if not others.postal_data.is_missing %}
         <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-half">
               <div id="chart-column-others-postal_data"
                    data-chart-title="Total number of Annual Postal Services Data"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2016"
                    data-source-link="https://nigerianstat.gov.ng/download/522"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-column-others-prepaid_metres"
+                   data-chart-title="Number of consumers with prepaid meters Q4 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/866"></div>
             </div>
         </section>
         {% endif %}
